--- a/less/imports/grid.less
+++ b/less/imports/grid.less
@@ -13,6 +13,10 @@
     display: table;
     width: 100%;
 
+    &.col-*,&.row {
+        width: inherit;
+    }
+
     &.parent-h {
         height: 100%;
     }
